composant banniere en creation

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,4 +10,8 @@ $font-size-medium: 24px;
   justify-content: center;
   align-items: center;
   font-size: $font-size-medium;
+
+//  @media (max-width: 480px) {
+//   
+//      }
 }
