--- a/src/components/Banniere/Banniere.scss
+++ b/src/components/Banniere/Banniere.scss
@@ -10,6 +10,7 @@ border-radius: 25px;
 border: 1px solid black;
 overflow: hidden;
 box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+margin-top: 50px;
 
 
     .banner_img{
