--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,7 +1,7 @@
 .card_container {
     width: 340px;
     height: 340px;
-    background-color: #ff6060;
+    //background-color: #ff6060;
     margin-top: 55px;
     position: relative;
     overflow: hidden;
@@ -11,13 +11,37 @@
         width: 100%;
         height: 100%;
         position: relative;
-    }
-    .card_title{
+        background-size: cover;
+
+        img{
+            width:100%;
+            height:100%;
+            object-fit: cover;
+        }
+
+        .gradient_overlay{
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 50%; // revoir la hauteur du degradé
+            background: linear-gradient(
+                180deg,
+                rgba(255, 255, 255, 0) 0%,
+                rgba(10, 10, 10, 0) 42%,
+                rgba(4, 4, 4, 0.205) 99.99%,
+                rgba(0, 0, 0, 0.5) 100%
+            );
+        z-index:1;
+        }
+
+     .card_title{
         font-size: 18px;
         font-weight: 700;
         color: white;
         position: absolute;
         left: 10px;
         bottom: 10px;
+        z-index: 2;
     }
-}
+}}
