--- a/src/components/Banniere/Banniere.scss
+++ b/src/components/Banniere/Banniere.scss
@@ -26,9 +26,12 @@ margin-top: 50px;
         width: 100%;
         height: 100%;
         background-color: black;
-        opacity: 0.6;
+        //mix-blend-mode:darken;
+        opacity: 0.6; // revoir opacity car 30% pour About
         z-index:1;
     }
+
+
     .banner_title{ /**revoir contouring du texte */
         font-size: $font-size-large;
         font-weight: $font-weight-bold;
