--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -1,5 +1,5 @@
 
-.collapse-container{
+.collapse-header{
     width: 1023px;
     height: 54px;
     background-color: #ff6060;
@@ -15,10 +15,25 @@
     &_title{
         font-size: 24px;
         font-weight: 700;
+        height: 54px;
         align-items: center;
     }
     &_logo{
         width: 32px;
         height:32px;
+        transition: transform 0.3s ease;
+        &.rotate{
+            transform: rotate(-180deg);
+        }
     }
+}
+
+.collapse_content{
+    width: 1023px;
+    background-color: #f6f6f6;;
+    border-radius: 0 0 5px 5px;
+    padding: 20px;
+    color: black;
+    font-size:18px;
+    line-height: 1.43;
 }
