--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -1,3 +1,5 @@
+@use './../../styles/variables' as* ;
+
 .gallery{
     max-width: 1240px;
     background-color: orange;/** #f6f6f6;*/
@@ -11,4 +13,5 @@
     margin: 50px auto 0 auto;
     padding-left: 33px;
     padding-bottom: 50px;
+    box-sizing: border-box;
 }
