--- a/src/pages/ErrorPage/ErrorPage.scss
+++ b/src/pages/ErrorPage/ErrorPage.scss
@@ -1,6 +1,6 @@
 
 //@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
-@use'../../styles/variables';
+@use './../../styles/variables' as* ;
 
 .errorPage{
     display: flex;
