--- a/src/pages/Flat/Flat.scss
+++ b/src/pages/Flat/Flat.scss
@@ -1,3 +1,5 @@
+@use './../../styles/variables' as* ;
+
 .flat{
     max-width: 1240px;
     min-height: 643px;
@@ -8,8 +10,23 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-top: 25px;
 
 }
+ .titleTag{
+    display: flex;
+    flex-direction: column;
+
+    &_title{
+        margin-bottom: 12px;
+        @include title($size:$size-mediumX,$color:$main-color)
+    }
+    &_location{
+        margin-bottom: 25px;
+        @include title($size:$size-normal,$color:black)
+    }
+
+ }
 
 .blocDeux{
     max-width: 1240px;
@@ -17,7 +34,7 @@
     flex-direction: row;
     justify-content:center;
     gap:76px;
-    margin: 20px auto;
-    box-sizing: border-box;
+    margin: 25px auto;
+
 
 }
