--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -15,6 +15,7 @@
         height: 100%;
         position: relative;
         background-size: cover;
+        z-index: 0;
 
         img{
             width:100%;
@@ -39,9 +40,6 @@
         }
 
      .card_title{
-       /* font-size: 18px;
-        font-weight: 700;*/
-        color: white;
         position: absolute;
         left: 10px;
         bottom: 10px;
