--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -12,21 +12,19 @@
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
-    border-radius: 5px;
     overflow: hidden;
 
 
 
     &_title{
-        font-size: 24px;
-        font-weight: 700;
         height: 54px;
         display: flex;
         align-items: center;
+        @include title($weight:$weight-bold)
     }
     &_logo{
-        width: 32px;
-        height:32px;
+        width: 24px;
+        height: 13px;
         transition: transform 0.3s ease;
         &.rotate{
             transform: rotate(-180deg);
@@ -46,7 +44,16 @@
     background-color:#f6f6f6;
     border-radius: 0 0 5px 5px;
     padding: 20px;
-    color: black;
-    font-size:18px;
-    line-height: 1.43;
+    @include title($size-normal,400,black)
 }}
+
+.flatCollapse {
+    .collapse-header{
+    border-radius: 10px;
+    &_title{
+        @include title(18px,$weight-bold,white)
+    }
+
+} 
+}
+
