--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -2,7 +2,7 @@
 
 .gallery{
     max-width: 1240px;
-    background-color: orange;/** #f6f6f6;*/
+    background-color:#f6f6f6;
     border-radius: 25px;
     width: 100%;
     display: grid;
