--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -18,3 +18,9 @@ $weight-bold:700;
     color: $color;
     line-height: 143%;
 }
+
+$bk-desktop: 1080px;
+$bk-tablet-max:1079px;
+$bk-tablet-min:780px;
+$bk-mobile: 779px;
+
