--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,6 +8,11 @@
     align-items: center;
     height: 68px;
     max-height: 1240px;
+    @media (max-width: $bk-mobile){
+        max-width: 335px;
+        
+    }
+  
 
 
     &_logoRed{
