--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -8,5 +8,12 @@
     margin: 30px auto;
     width: 1023px;
     justify-content: center;
+    
+    @media (max-width:$bk-mobile){
+        width: 100%;
+        box-sizing: border-box;
+        gap: 20px;
+        margin-bottom: 0px;
+    }
 
 }
