--- a/src/components/Banniere/Banniere.scss
+++ b/src/components/Banniere/Banniere.scss
@@ -55,6 +55,7 @@
             font-size: $size-medium;
             align-self: flex-start;
             padding-left: 16px;
+            padding-top: 15px;
             line-height: 100%;
         }
 
