--- a/src/components/Gallery/Gallery.scss
+++ b/src/components/Gallery/Gallery.scss
@@ -14,4 +14,13 @@
     padding-left: 33px;
     padding-bottom: 50px;
     box-sizing: border-box;
+
+    @media (max-width:$bk-mobile){
+        grid-template-columns: 1fr;
+        gap: 22px;
+        justify-items: center;
+        margin-top: 22px;
+        background-color: white;
+        padding: 0;
+    }
 }
