--- a/src/components/Banniere/Banniere.scss
+++ b/src/components/Banniere/Banniere.scss
@@ -20,7 +20,10 @@
         justify-content: left;
         border-radius: 10px;
         margin-top: 0px;
-        }
+        };
+    @media (min-width:$bk-tablet-min) and (max-width:$bk-tablet-max){
+        height: 170px;
+    }
 
 
 
