--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -15,5 +15,8 @@
         gap: 20px;
         margin-bottom: 0px;
     }
+     @media (min-width:$bk-tablet-min) and (max-width:$bk-tablet-max){
+        width: 100%;
+    }
 
 }
