--- a/src/pages/Flat/Flat.scss
+++ b/src/pages/Flat/Flat.scss
@@ -70,5 +70,10 @@
         margin-top:0;
         margin-bottom: 0;
     }
+     @media (min-width:$bk-tablet-min) and (max-width:$bk-tablet-max){
+        flex-direction: column;
+        gap:20px;
+        margin-top: 30px;
+    }
 
 }
